<resources>
    <string name="app_name">BatLogin</string>


    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="nombre">Nombre:</string>
    <string name="versi_n_del_cat_logo">Versión del Catálogo:</string>
    <string name="actualizar_cat_logo">Actualizar Catálogo</string>
    <string name="ubicaci_n">Ubicación</string>
</resources>
