<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorActivityBackground"
    android:padding="@dimen/paddingActivity"
    tools:context="net.iplace.bat.login.activities.AppListActivity">

    <TextView
        android:id="@+id/tv_name_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nombre"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_app_list_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginElement"
        android:lines="2"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_name_placeholder" />

    <TextView
        android:id="@+id/tv_ubicacion_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/marginElement"
        android:text="@string/ubicaci_n"
        android:textColor="@android:color/darker_gray"
        app:layout_constraintTop_toBottomOf="@id/tv_app_list_name" />

    <TextView
        android:id="@+id/tv_app_list_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/marginElement"
        android:lines="2"
        android:textColor="@android:color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_ubicacion_placeholder"
        app:layout_constraintTop_toTopOf="@id/tv_ubicacion_placeholder" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_app_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/marginElement"
        app:layout_constraintBottom_toTopOf="@id/btn_app_list_update_catalog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_app_list_location" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/btn_app_list_update_catalog"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/bat_amarillo"
        android:text="@string/actualizar_cat_logo"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>
